--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,20 +11,27 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
+    "@uploadthing/react": "^6.4.1",
     "date-fns": "^3.6.0",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "14.1.4",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "touch-cli": "^0.0.1",
+    "uploadthing": "^6.7.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "20.12.5",
+    "@types/react": "^18.2.74",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.4.4"
   }
 }
