--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,15 +11,20 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^2.2.3",
     "@uploadthing/react": "^6.4.1",
     "date-fns": "^3.6.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "14.1.4",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
+    "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "touch-cli": "^0.0.1",
     "uploadthing": "^6.7.0",
     "yup": "^1.4.0"
