--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "@uploadthing/react": "^6.4.1",
     "date-fns": "^3.6.0",
