--- a/Backend/package.json
+++ b/Backend/package.json
@@ -38,7 +38,8 @@
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^15.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
