--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,20 +14,28 @@
     "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.15",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@uploadthing/react": "^6.4.1",
+    "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "14.1.4",
+    "numeral": "^2.0.6",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-toastify": "^10.0.5",
+    "recharts": "^2.12.6",
     "touch-cli": "^0.0.1",
     "uploadthing": "^6.7.0",
     "yup": "^1.4.0"
@@ -41,7 +49,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.4"
   }
 }
