--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "20.12.5",
+    "@types/numeral": "^2.0.5",
     "@types/react": "^18.2.74",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.10.2",
