--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^9.1.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.6",
+    "redux-persist": "^6.0.0",
     "touch-cli": "^0.0.1",
     "uploadthing": "^6.7.0",
     "yup": "^1.4.0"
