--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "next": "^14.2.3",
+    "nookies": "^2.5.2",
     "numeral": "^2.0.6",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
