--- a/Backend/package.json
+++ b/Backend/package.json
@@ -33,6 +33,7 @@
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
     "mongoose": "^8.2.4",
     "nodemailer": "^6.9.13",
@@ -52,6 +53,7 @@
     "@types/express": "^4.17.17",
     "@types/express-serve-static-core": "^4.19.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.14",
     "@types/passport-jwt": "^4.0.1",
