--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,6 +19,7 @@
     "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@uploadthing/react": "^6.5.1",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
