--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.16",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-google-maps/api": "^2.19.3",
     "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^2.2.3",
     "@uploadthing/react": "^6.5.1",
@@ -35,6 +36,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.2.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.6",
@@ -51,6 +53,7 @@
     "@types/react": "^18",
     "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^18",
+    "@types/react-places-autocomplete": "^7.2.14",
     "daisyui": "^4.10.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
