--- a/Backend/package.json
+++ b/Backend/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/throttler": "^5.1.2",
     "@nestjs/websockets": "^10.3.8",
     "@willsoto/nestjs-prometheus": "^6.0.0",
     "bcryptjs": "^2.4.3",
@@ -36,6 +37,7 @@
     "class-validator": "^0.14.1",
     "cloudinary": "^2.2.0",
     "cookie-parser": "^1.4.6",
+    "helmet": "^7.1.0",
     "mongoose": "^8.2.4",
     "nodemailer": "^6.9.13",
     "passport-jwt": "^4.0.1",
