--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mui/material": "^5.15.16",
     "@react-google-maps/api": "^2.19.3",
+    "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
@@ -41,7 +42,6 @@
     "socket.io-client": "^4.7.5",
     "touch-cli": "^0.0.1",
     "ts-node": "^10.9.2",
-    "uploadthing": "^6.10.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
