--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -26,7 +26,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "jest.setup.ts"
+    "jest.setup.ts",
+    "src/app/api/auth/[...nextauth]/route.ts"
   ],
   "exclude": ["node_modules"]
 }
