--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,8 +17,8 @@
     "@react-google-maps/api": "^2.19.3",
     "@react-oauth/google": "^0.12.1",
     "@reduxjs/toolkit": "^2.2.3",
-    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "cookie": "^0.6.0",
     "date-fns": "^3.6.0",
     "depcheck": "^1.4.7",
     "jest-environment-jsdom": "^29.7.0",
@@ -49,6 +49,7 @@
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
+    "@types/cookie": "^0.6.0",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
