--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -60,8 +60,9 @@
     "@types/react-places-autocomplete": "^7.2.14",
     "babel-jest": "^29.7.0",
     "daisyui": "^4.10.5",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.3",
+    "eslint-plugin-next": "^0.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "postcss": "^8",
