--- a/Backend/package.json
+++ b/Backend/package.json
@@ -46,7 +46,8 @@
     "prom-client": "^15.1.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "stripe": "^15.3.0"
+    "stripe": "^15.3.0",
+    "vercel": "^37.8.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
