--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "dist/main.ts",
+            "src": "api/main.ts",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "dist/main.ts",
+            "dest": "api/main.ts",
             "methods": [
                 "GET",
                 "PUT",
