--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -2,21 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "src/main.ts",
+            "src": "src/**/*.ts",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "src/main.ts",
-            "methods": [
-                "GET",
-                "PUT",
-                "POST",
-                "PTCH",
-                "DELETE"
-            ]
+            "dest": "src/main.ts"
         }
     ]
 }
