--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [build]
+  command = "npm run build"
   functions = "Backend/*"
 
-[master]
-  functions = "Backend/*"
+[functions]
+  node_bundler = "esbuild"
